Changes : - Use 64-bit fseek and ftell functions (Fixes 112852 and 112753)

BUG: 112753
BUG: 112852


svn path=/trunk/extragear/network/ktorrent/; revision=462330